2004-04-12  Gary Ekker  <gekker@novell.com>

        Fixes #56628
	
	* gui/calendar-component.c (create_new_event): Add informational dialog
	when user attempts event creation in read-only calendar.
	

2004-04-09  Gary Ekker  <gekker@novell.com>

	* gui/dialogs/url-editor-dialog.c: Fixed to use e-passwords.

	* gui/dialogs/cal-prefs-dialog.c: Fixed crash and bugs created by 
	changes made for instant apply.

	* gui/itip-utils.c: Fixed to use e-passwords.

	* gui/e-pub-utils.c: Fixed to use e-passwords.
	(just_published): Fixed error in logic.
	(e_pub_publish): Fixed crash if ESource is NULL.
	

2004-04-09  Chris Toshok  <toshok@ximian.com>

	* gui/dialogs/e-delegate-dialog.c (e_delegate_dialog_construct):
	EABDestination -> EDestination.
	(e_delegate_dialog_get_delegate): same.
	(e_delegate_dialog_get_delegate_name): same.

	* gui/dialogs/alarm-options.c (alarm_to_malarm_widgets):
	EABDestination -> EDestination.
	(malarm_widgets_to_alarm): same.

	* gui/e-select-names-editable.c
	(e_select_names_editable_get_address): EABDestination ->
	EDestination.
	(e_select_names_editable_get_name): same.

	* gui/e-meeting-list-view.c (process_section): EABDestination ->
	EDestination.
	(select_names_ok_cb): same.

2004-04-09  Dan Winship  <danw@ximian.com>

	* gui/gnome-cal.c (gnome_calendar_set_ui_component): Create an
	EUserCreatableItemsHandler for the view if there isn't one yet,
	and then activate it.
	(gnome_calendar_destroy): destroy it.

	* gui/calendar-component.c (impl__get_userCreatableItems): add
	object/folder flags to items.

	* gui/e-tasks.c (e_tasks_set_ui_component): Create an
	EUserCreatableItemsHandler for the view if there isn't one yet,
	and then activate it.
	(e_tasks_destroy): destroy it.

	* gui/tasks-component.c (impl__get_userCreatableItems): add
	object/folder flags. Change "Task List" to "Tasks Group" per new
	specs.

	* gui/calendar-commands.c (calendar_control_deactivate): clear the
	GnomeCal's ui_component rather than setting it again
