@@ -48,7 +48,7 @@
 #include "dialogs/copy-source-dialog.h"
 #include "dialogs/event-editor.h"
 #include "widgets/misc/e-source-selector.h"
-
+#include "widgets/misc/e-info-label.h"
 
 /* IDs for user creatable items */
 #define CREATE_EVENT_ID        "event"
@@ -810,7 +810,7 @@ impl_createControls (PortableServer_Servant servant,
 {
 	CalendarComponent *calendar_component = CALENDAR_COMPONENT (bonobo_object_from_servant (servant));
 	CalendarComponentPrivate *priv;
-	GtkWidget *selector_scrolled_window;
+	GtkWidget *selector_scrolled_window, *vbox, *info;
 	GtkWidget *statusbar_widget;
 	BonoboControl *sidebar_control;
 	BonoboControl *statusbar_control;
@@ -843,7 +843,16 @@ impl_createControls (PortableServer_Servant servant,
 					     GTK_SHADOW_IN);
 	gtk_widget_show (selector_scrolled_window);
 
-	sidebar_control = bonobo_control_new (selector_scrolled_window);
+	info = e_info_label_new("evolution-calendar-mini.png");
+	e_info_label_set_info((EInfoLabel *)info, _("Calendars"), "");
+	gtk_widget_show (info);
+
+	vbox = gtk_vbox_new(FALSE, 0);
+	gtk_box_pack_start(GTK_BOX (vbox), info, FALSE, TRUE, 0);
+	gtk_box_pack_start(GTK_BOX (vbox), selector_scrolled_window, TRUE, TRUE, 0);
+	gtk_widget_show (vbox);
+
+	sidebar_control = bonobo_control_new (vbox);
 
 	/* Create main calendar view */
 	/* FIXME Instead of returning, we should make a control with a
