@@ -1,3 +1,12 @@
+2004-04-14  Not Zed  <NotZed@Ximian.com>
+
+	* gui/tasks-component.c (impl_createControls): Same as below for
+	the tasks component.
+
+	* gui/calendar-component.c (impl_createControls): add the info
+	area label widget to the sidebar control (c&p the addressbook
+	code).
+
 2004-04-12  Gary Ekker  <gekker@novell.com>
 
         Fixes #56628
